--- a/index.css
+++ b/index.css
@@ -3,28 +3,15 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  font-family: "微软雅黑";
+  font: 14px "微软雅黑";
 }
 
 ul {
   margin: 0;
 }
-
-.btn {
-  background: transparent;
-  padding: 5px 10px;
-  color: #757575;
-  font-size: 14px;
-  border: 1px solid #dedede;
-  border-radius: 1px;
-  outline: none;
-  margin:5px;
-}
-
-.btn--selected {
-  background: #43bf53;
-  color: #fff;
-  border-color: #43bf53;
+a {
+  color: #a2a2a2;
+  text-decoration: none;
 }
 
 .pc {
@@ -37,37 +24,57 @@ ul {
   display: block;
   font-size: 20px;
   padding: 10px 20px;
-  border: 1px dashed #dedede;
+  border: 1px dashed #ececec;
 }
 
-.pc .main{
-	display: none;
+.pc .main {
+  display: none;
 }
 
 .mb .tip {
   display: none;
 }
 
-.mb .main{
-	display: block;
+.mb .main {
+  display: block;
 }
 
-.panel{
-	margin-bottom: 20px;
-	border-top: 1px solid #efefef;
-	border-bottom: 1px solid #efefef;
+.container {
+  margin-top: 10px;
 }
-.panel main {
-	height: 200px;
+
+.container .container_header {
+  padding: 10px 5px;
 }
-.panel_header{
-	padding: 10px;
-	color: #666;
+
+.container .main {
+  padding: 5px;
+  height: 200px;
 }
-.panel_footer{
-	font-size: 14px;
-	padding: 5px;
+
+.header{
+  display: flex;
+  height: 45px;
+  border-bottom: 1px solid #ececec;
 }
-.panel_footer .panel_footer-item {
-	margin-bottom: 5px;
+.header_item:first-child {
+  border-right: 1px solid #ececec;
+}
+.header_item {
+  flex: 1;
+  line-height: 45px;
+  text-align: center;
+}
+
+.footer {
+  text-align: center;
+}
+
+.footer a {
+  display: inline-block;
+  padding: 10px;
+  width: 90%;
+  margin: 20px 0;
+  border: 1px solid #e8e8e8;
+  border-radius: 5px;
 }
